Add POST for trips, HTTP cookie for login and signup endpoints
