# swagger.yml
@@ -116,6 +116,12 @@ paths:
       responses:
         "200":
           description: Successful response
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Trip'
 
   /my/friends:
     get:
