# web/controllers/trips_controller.py
@@ -1,4 +1,5 @@
 from connexion import request
+
 from web.handlers.trips_handler import create_trip
 
 
@@ -7,9 +8,11 @@ def handle_get_user_trips():
 
 
 def handle_create_trip():
-    if request.is_json:
-        for trip in request.get_json():
-            response = create_trip(trip_data=trip, _user_id=request.headers["userId"])
+    if not request.is_json:
+        return "No request body", 400
+
+    for trip in request.get_json():
+        response = create_trip(trip_data=trip, _user_id=request.headers["userId"])
     if not response:
-        return "Trips not created", 400
-    return "Trips created successfully", 200
+        return "Something went wrong during trip creation", 400
+    return response, 200
